FEAT: visual mouse tracker will now change styling whilst hovering elements

--- a/src/assets/CSS/global.css
+++ b/src/assets/CSS/global.css
@@ -98,4 +98,10 @@ textarea:not([rows]) {
 
 /* CSS GLOBAL STYLES */
 :root {
+  --clr-dark: hsl(0, 0%, 0%);
+  --clr-light: hsl(0, 0%, 100%);
+}
+
+* {
+  cursor: none;
 }
