--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,10 +1,14 @@
 .hero {
   text-align: center;
+  background-color: #e2fca6;
+  height: 100vh;
+  display: grid;
+  place-content: center;
 
   h1 {
-    font-family: "Excon", sans-serif;
     font-weight: 700;
-    margin-bottom: 1em;
+    text-transform: uppercase;
+    margin-block: 0 1em;
     font-size: 5rem;
   }
 }
