--- a/src/components/Mouse/mouse.module.css
+++ b/src/components/Mouse/mouse.module.css
@@ -1,6 +1,6 @@
 .mouse {
   --clr-dark: hsl(0, 0%, 10%);
-  --circle-width: 20px;
+  --circle-width: 1.25em;
 
   background-color: var(--clr-dark);
 
@@ -9,4 +9,5 @@
   border-radius: 50%;
   pointer-events: none;
   z-index: 999;
+  position: fixed;
 }
